set remote resizing as default
and increase display size: remote resizing won't go bigger than the set values, so increase them to make some room for bigger brower windows.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,10 @@ services:
     ports:
       - "5800:5800"
     environment:
+      - USER_ID=1000
+      - GROUP_ID=1000
+      - DISPLAY_WIDTH=1920
+      - DISPLAY_HEIGHT=1080
       - HOME=/config/
       - WINEPREFIX=/config/wine
     volumes:
