--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,11 @@
 version: '3.8'
 services:
   loxone-config:
-    #image: "local/loxone-config:latest"
-    image: "ghcr.io/lian/docker-loxone-config:main"
+    image: "local/loxone-config:latest"
     container_name: loxone-config
-    #build:
-    #  context: .
-    # dockerfile: Dockerfile
+    build:
+      context: .
+      dockerfile: Dockerfile
     ports:
       - "5800:5800"
     environment:
