Bugfix to use german Umlauts within Loxone Config (#1)
* added packages to modify xvnc keyboard maps
hardcoded the xvnc keyboard to "de"

* made the setting for the xvnc keyboard configurable via docker variable XLANG

* updated readme

* fix formatting

* fix formatting

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ services:
       - HOME=/config/
       - WINEPREFIX=/config/wine
       - WINEARCH=win32
+      - XLANG=de
     volumes:
       - "./config:/config:rw"
       - "./config/Loxone:/config/wine/drive_c/users/app/Documents/Loxone:rw"
